fix bug on smaller screens

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -589,14 +589,19 @@ footer {
   display: none;
 }
 
+.main-heading {
+  display: inline-block;
+  color: #fff;
+  background: url(../images/background1.jpg);
+  width: 100%;
+}
+
 .menu-toggle {
   display: inline-block;
   padding: .50em 15px;
   line-height: 1em;
   font-size: 1em;
   color: #fff;
-  background-color: #000;
-  width: 100%;
 }
 
 .fa {
@@ -604,11 +609,6 @@ footer {
   padding: 0.5em;
   border: solid 2px #fff;
   border-radius: 2px;
-}
-
-.menu-toggle:hover,
-.menu-toggle:focus {
-  color: green;
 }
 
 .hamburger-menu {
@@ -724,18 +724,16 @@ footer {
 
 .alantic-wall {
   text-align: center;
-  padding: 130px 80px 150px 80px;
+  padding: 50px 80px 150px 80px;
 }
 
 .wall {
   width: 80%;
-  display: block;
   padding: 150px 80px 150px 80px;
 }
 
 .ex-tiger {
   width: 80%;
-  display: block;
   padding: 150px 80px 150px 80px;
 }
 
@@ -746,7 +744,6 @@ footer {
 
 .op-tonga {
   width: 80%;
-  display: block;
   padding: 150px 80px 150px 80px;
 }
 
@@ -758,17 +755,17 @@ footer {
 .beach-landing {
   margin: auto;
   width: 80%;
-  display: block;
 }
 
 .img-text {
   text-align: center;
   text-decoration: solid;
+  padding-left: 80px;
+  padding-right: 80px;
 }
 
 .utah-landing{
   width: 80%;
-  display: block;
   padding: 150px 80px 200px 80px;
 }
 
@@ -779,7 +776,6 @@ footer {
 
 .landing {
   width: 80%;
-  display: block;
   padding: 250px 80px 200px 80px;
 }
 
@@ -790,7 +786,6 @@ footer {
 
 .begins {
   width: 80%;
-  display: block;
   padding: 200px 80px 150px 80px;
 }
 
@@ -801,7 +796,6 @@ footer {
 
 .climb {
   width: 80%;
-  display: block;
   padding: 200px 80px 150px 80px;
 }
 
@@ -812,7 +806,6 @@ footer {
 
 .ohmaha-landing {
   width: 80%;
-  display: block;
   padding: 100px 80px 150px 80px;
 }
 
@@ -823,7 +816,6 @@ footer {
 
 .gold-landing {
   width: 80%;
-  display: block;
   padding: 220px 80px 150px 80px;
 }
 
@@ -834,7 +826,6 @@ footer {
 
 .juno-landing {
   width: 80%;
-  display: block;
   padding: 150px 80px 150px 80px;
 }
 
@@ -845,7 +836,6 @@ footer {
 
 .manor {
   width: 80%;
-  display: block;
   padding: 250px 80px 150px 80px;
 }
 
@@ -860,17 +850,15 @@ footer {
 }
 
 .day-video {
-  width: 80%;
-  display: block;
-  padding: 0px 100px 40px 100px;
+  padding: 20px 80px 20px 120px;
 }
 
-.day-video p {
-  padding: 50px 100px 10px 100px;
+.video-p {
+  text-align: center;
+  padding: 100px 80px 50px 80px;
 }
 
 .programs {
-  display: block;
   text-align: center;
   padding: 100px 80px 100px 10px;
 }
@@ -885,10 +873,9 @@ footer {
   padding: 30px 80px 20px 80px;
 }
 
-.center-div {
-  float: none;
+.center {
   text-align: center;
-  padding: none;
+  padding: 100px 80px 20px 50px;
 }
 
 
